--- a/templates/base.html
+++ b/templates/base.html
@@ -10,22 +10,22 @@
   </script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="/static/bootstrap.min1.css">
-  <!-- https://bootswatch.com/minty/ -->
-  <!-- https://crello.com/user/projects/614df7b020a4241476325cf0/ -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=PT+Sans&display=swap" rel="stylesheet">
-<link rel="stylesheet"
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=PT+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet"
   href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-<link rel="shortcut icon" href="/static/favicon.ico">
-<link rel="stylesheet" href="/static/style.css"> 
+  <link rel="shortcut icon" href="/static/favicon.ico">
+  <link rel="stylesheet" href="/static/style.css"> 
 </head>
 <body class="bg-primary">
   <div class="box">
     <nav class="navbar navbar-expand-md bg-secondary">
+      <div class="container-fluid mx-1">
       <div class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <img class="logo" src="/static/images/logo.png" alt="logo">
+          <img class="logo" src="/static/images/logo.png" alt="logo"> 
+          <!-- <h1 class="text-danger p-0"><i class="fas fa-apple-alt"></i></h1>  -->
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/joke">What's Left in your Fridge <i class="fas fa-search"></i></a>
@@ -34,8 +34,15 @@
               <a class="dropdown-item" href="/execise">Execises <i class="fas fa-running"></i></a>
             </div>
         </div>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <form class="navbar-form col-sm-6 col-sm-8 mx-auto my-2" id="search" action="/find" role="search">
+        <button class="navbar-toggler collapsed text-warning p-0" type="button" data-toggle="collapse"
+        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation"> <h4 class="text-warning display-6 p-2 m-2"> <i class="fas fa-lemon"></i></h4>
+        <span class="icon-bar top-bar"></span>
+        <span class="icon-bar middle-bar"></span>
+        <span class="icon-bar bottom-bar"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <form class="navbar-form col-sm-3 col-sm-3 col-sm-6 col-sm-8 mx-auto my-2" id="search" action="/find" role="search">
             <div class="input-group">
               <input type="text" class="form-control" placeholder="Pasta or Gluten Free or Low Sodium" name="query" id="query">
                 <div class="input-group-btn input-group-append">
@@ -43,7 +50,7 @@
                 </div>
             </div>
           </form>
-          <ul class="navbar-nav my-auto align-items-center">
+          <ul class="d-flex navbar-nav my-auto align-items-center">
           {% if session["user_id"] %}
           <li class="nav-item justify-content-center">
             <a class="nav-link" href="/users/{{g.user.id}}"><h5> <img class="logo" src="/static/images/user1.gif" alt="logo">{{g.user.username}}</h5></a>
@@ -67,11 +74,12 @@
           <li class="nav-item">
             <a class="nav-link" href="/login">
               <span class="material-icons-outlined">
-                <h5>Login <i class="fas fa-sign-in-alt"></i></h5>
+                <h5>Login <i class="fas fa-sign-in-alt "></i> </h5> 
               </span></a>
           </li>
           {% endif %}
           </ul>
+       
         </div>
       </nav>
       <div class="row">
