--- a/templates/index.html
+++ b/templates/index.html
@@ -5,17 +5,20 @@
   <div class="my-4 px-6">
     <h1 class="d-flex m-2 text-warning display-3 align-content-lg-around justify-content-center align-items-center"> 
        Welcome to the Recipe Tips </h1>
-      <div class="d-flex justify-content-end col-11 m-5 mx-auto">
-        <h8 class="some-paragraph text-light col-7">
+      <!-- <div class="d-flex justify-content-end col-11 m-5 mx-auto"> -->
+        <div class="row justify-content-md-center">
+          <h5 class="text-light col-7">
+        <!-- <h8 class="some-paragraph text-light col-7"> -->
           <div class="jumbotron p-4">
             For a quick start, just click on the Logo and see the random recipes auto populated. <i class="some-par tab far fa-hand-point-right text-success display-6"></i> <br>
             <hr class="my-2 px-6"> Select food by name, or complex recipe search like dairy free, high protein, low sodium by using the search bar.  
             <br>On the left top navbar just click on the badge and can use recipe searth "what's left in your fridge" or random recipes.  
-            <hr class="my-2 px-6"> <p class="some-par tab1 flex text-success display-6"> Bon Appetit! </p>
+            <hr class="my-2 px-6"> <p class="tab1 flex text-success display-6"> Bon Appetit! </p>
           </div>
-        </h8> 
-        <a href="/random"><img class="some-par p-2" id="logo1" src="/static/images/logos4.png" alt="logo"> </a>
+        </h5> 
+        <a href="/random"><img class="d-flex right p-2" id="logo1" src="/static/images/logos4.png" alt="logo"> </a>
       </div>
   </div>
 </div>
+<!-- some-par -->
 {% endblock %}
