--- a/templates/base.html
+++ b/templates/base.html
@@ -23,9 +23,9 @@
     <nav class="navbar navbar-expand-md bg-secondary">
       <div class="container-fluid mx-1">
       <div class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <img class="logo" src="/static/images/logo.png" alt="logo"> 
-          <!-- <h1 class="text-danger p-0"><i class="fas fa-apple-alt"></i></h1>  -->
+        <a class="nav-link dropdown-toggle flux" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <!-- <img class="logo" src="/static/images/logo.png" alt="logo">  -->
+          <i class="fas fa-utensils display-6"></i>
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/joke">What's Left in your Fridge <i class="fas fa-search"></i></a>
@@ -36,7 +36,7 @@
         </div>
         <button class="navbar-toggler collapsed text-warning p-0" type="button" data-toggle="collapse"
         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-        aria-label="Toggle navigation"> <h4 class="text-warning display-6 p-2 m-2"> <i class="fas fa-lemon"></i></h4>
+        aria-label="Toggle navigation"> <i class="fas fa-lemon text-warning display-6 p-2 m-2"></i>
         <span class="icon-bar top-bar"></span>
         <span class="icon-bar middle-bar"></span>
         <span class="icon-bar bottom-bar"></span>
@@ -62,9 +62,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/logout"> <h4><i class="fas fa-sign-out-alt"></i></h4>
-              <!-- <span class="material-icons-outlined">
-              <h5 class="text-danger">Logout</h5>
-              </span> -->
+              <!-- <h5 class="text-danger">Logout</h5> -->
               </a>
           </li>
           {% else %}
@@ -74,7 +72,7 @@
           <li class="nav-item">
             <a class="nav-link" href="/login">
               <span class="material-icons-outlined">
-                <h5>Login <i class="fas fa-sign-in-alt "></i> </h5> 
+                <h5>Login <i class="fas fa-sign-in-alt"></i> </h5> 
               </span></a>
           </li>
           {% endif %}
@@ -83,9 +81,9 @@
         </div>
       </nav>
       <div class="row">
-        <div class="container text-center  w-25">
+        <div class="container text-center w-25">
         {% for category, message in get_flashed_messages(with_categories=True) %}
-        <div class="alert alert-{{ category }}"> <h4> {{ message }} </h4></div>
+        <div class="alert alert-{{ category }}"> <h5> {{ message }} </h5></div>
         {% endfor %}
         </div>
       </div>
