--- a/templates/users/edit.html
+++ b/templates/users/edit.html
@@ -1,9 +1,19 @@
 {% extends 'base.html' %}
 {% block title %}Update Profile{% endblock %}
 {% block content %}
-<div class="container">
-  <div class="row justify-content-md-center">
-    <div class="jumbotron col-6 m-2">
+<style>
+  body {
+    background: url('/static/images/home1.jpeg') no-repeat center center fixed;
+	  background-size: cover;
+	  -webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-clip: border-box;
+  	height: 100%;
+  }
+</style>
+<div class="container my-4">
+  <div class="jumbotron col-md-8 offset-md-2 justify-content-center">
       <h1 class="join-message text-warning text-center">Update Your Profile</h1>
         <form method="POST" id="user_form">
           {{ form.hidden_tag() }}
@@ -24,7 +34,6 @@
             <i class="fas fa-window-close"></i>
           </a>
         </form>
-    </div>
   </div>
 </div>
 {% endblock %}
