--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}Login{% endblock %}
 {% block content %}
-<div class="container">
-  <div class="row justify-content-md-center">
-    <div class="jumbotron col-md-8 my-4 px-4">
+<div class="container my-4">
+  <div class="jumbotron col-md-8 offset-md-2 justify-content-center">
       <h1 class="my-3 text-center text-warning font-italic">Welcome back</h1>
         <form id="login-form" method='POST'>
           {{ form.hidden_tag() }}
@@ -31,6 +30,5 @@
           </div>
         </form>
     </div>
-  </div>
 </div>
 {% endblock %}
