--- a/templates/users/show.html
+++ b/templates/users/show.html
@@ -12,9 +12,8 @@
   	height: 100%;
   }
 </style>
-<div class="container">
-  <div class="row justify-content-md-center">
-     <div class="jumbotron col-md-9 my-4 px-4">
+  <div class="container my-4">
+     <div class="T jumbotron my-2 col-md-8 offset-md-2">
         <div class="row">
           <div class="col">
             <h1 class="display-4 text-warning font-weight-bold">{{user.username}}</h1>
@@ -41,7 +40,7 @@
             <p class="font-italic text-light">{{user.notes}}</p> </h4>
           </div>
           <div id="recipe-info" class="col">
-            <h4 class="lead text-right font-weight-bold"><a class="text-success" href="/favorites"> Total Favorites:
+            <h4 class="lead font-weight-bold"><a class="text-success" href="/favorites"> Total Favorites:
               {{user.recipes | length}}</a>
               {% if g.user.recipes %}
               {% for r in g.user.recipes %}
@@ -57,6 +56,5 @@
           </div>
         </div>
     </div>
-  </div>
 </div>
 {% endblock %}
