--- a/templates/foods/favorites.html
+++ b/templates/foods/favorites.html
@@ -16,13 +16,14 @@
   {% if g.user.recipes %}
   <div id="recipe-info" class="row justify-content-center align-items-center mt-2">
     {% for r in g.user.recipes %}
-    <div class="jumbotron1 col-3 col-sm-10-6 m-2">
+    <div class="jumbotron1 col-3 col-6 col-md-4">
       <a href="/recipes/{{r.id}}" data-id="{{r.id}}" class="show-recipe">
         <div class="card border border-warning mb-4 mx-auto">
           <img class="card-img-top" src="{{r['image']}}" alt="Card image cap" alt="{{r.name}}"> 
             <div class="card-body py-0">
-              <h5 class="text-danger font-weight-bold card-title m-2">{{ r['title'] }}</h5> </a>
-                <div class="card-body p-1 text-light text-right">
+              <h5 class="T text-danger font-weight-bold card-title">{{ r['title'] }}</h5> </a>
+              <br>
+                <div class="p-1 text-light text-right">
                   <p class="card-text">Total Cook Time: {{r.readyInMinutes}} minutes</p>
                   <p class="card-text">Serves: {{r.servings}}</p>
                 </div>
