--- a/templates/foods/foody.html
+++ b/templates/foods/foody.html
@@ -1,24 +1,39 @@
 {% extends 'base.html' %}
 {% block title %}what's left in the fridge{% endblock %}
 {% block content %}
+<style>
+  body {
+    background: url('/static/images/home.jpeg') no-repeat center center fixed;
+	  background-size: cover;
+	  -webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-clip: border-box;
+  	height: 100%;
+  }
+</style>
 <div class="container">
   <div id="recipe-info" class="row justify-content-center align-items-center mt-2">
       {% for recipe in recipes %}
-        <div class="jumbotron1 col-3 col-sm-10-6 m-2">
+        <div class="jumbotron1 col-3 col-6 col-md-4">
           <a href="/recipes/{{recipe.id}}">
             <div class="card border border-warning mb-4 mx-auto">
               <img class="card-img-top" src="{{recipe['image']}}" alt="Card image cap"> 
-                <h5 class="text-danger text-center card-title m-2">{{ recipe['title'] }}</h5> </a>
-                  <div class="card-body p-0">
+              <div class="T card-body p-1">
+                <h5 class="text-danger card-title">{{ recipe['title'] }}</h5> </a>
+                <br>
+                <div class="p-1 text-light text-right">
                       {% if 'likes' not in recipe%}
-                        <p class="card-text text-warning"> How many minutes for preparation? {{recipe['preparationMinutes']}} </p>
-                        <p class="card-text text-warning"> How many minutes for cooking? {{recipe['cookingMinutes']}} </p> 
-                        <p class="card-text text-warning"> How many likes has this recipe? {{recipe['aggregateLikes']}} </p>
+                        <p class="card-text text-warning"> Preparation {{recipe['preparationMinutes']}} minutes </p>
+                        <p class="card-text text-warning"> Cooking time: {{recipe['cookingMinutes']}} minutes </p> 
+                        <p class="card-text text-warning"> This recipe has {{recipe['aggregateLikes']}} likes </p>
                       {% else %}
-                        <p class="card-text text-warning"> How many your ingridients? {{recipe['usedIngredientCount']}} </p>
-                        <p class="card-text text-warning"> How many missed ingridients? {{recipe['missedIngredientCount']}} </p> 
-                        <p class="card-text text-warning"> How many likes has this recipe? {{recipe['likes']}} </p>
+                        <p class="card-text text-warning"> You have {{recipe['usedIngredientCount']}} ingridients </p>
+                        <p class="card-text text-warning"> Missing {{recipe['missedIngredientCount']}} ingridients </p> 
+                        <p class="card-text text-warning"> This recipe has {{recipe['likes']}} likes </p>
                       {% endif %}
+                      </div>
+                      
                       {% if g.user %}
                         <button data-id="{{recipe.id}}" class='fav btn btn-sm'>
                         <i class="{% if recipe.id in recipe_ids %}fas fa-heart fa-2x{% else %}far fa-heart fa-2x{% endif %}">
@@ -26,10 +41,10 @@
                       {% endif %}
                   </div>
         </div>
-  </div> 
+      </div> 
       {% endfor %}
       <div class="flex"> 
         <a href="/" class="neon btn btn-outline-warning btn-lg m-2"><i class="fas fa-home"></i></a>
       </div>
 </div>
-{% endblock %}s
+{% endblock %}
