--- a/templates/foods/recipes.html
+++ b/templates/foods/recipes.html
@@ -1,10 +1,21 @@
 {% extends 'base.html' %}
 {% block title %}Recipes from Random{% endblock %}
 {% block content %}
+<style>
+  body {
+    background: url('/static/images/home.jpeg') no-repeat center center fixed;
+	  background-size: cover;
+	  -webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-clip: border-box;
+  	height: 100%;
+  }
+</style>
 <div class="container">
   {% if recipes %}
     <div id="recipe-info" class="row justify-content-center align-items-center mt-2">
-        <div class="jumbotron col-3 my-4">
+      <div class="jumbotron col-3 col-6 col-md-4">
           <div class="vertical-group" id="card">
             <th><h5 class="text-warning">Refine Your Random Search</h5></th>
               <tbody>
@@ -30,15 +41,19 @@
             </div>
           </div>
         {% for r in recipes %}
-          <div class="jumbotron1 col-3 col-sm-10-6 m-2">
+          <div class="col-3 col-6 col-md-4">
             <a href="/recipes/{{r.id}}" data-id="{{r.id}}" class="show-recipe">
               <div class="card border border-warning mb-4 mx-auto">
                 <img src="{{r.image}}" class="card-img-top" alt="{{r.name}}">
                   <div class="card-body py-1">
-                    <h5 class="text-danger text-center card-title m-2">{{ r['title'] }}</h5> </a>
+                    <h5 class="T text-danger text-center card-title">{{ r['title'] }}</h5> </a>
+                    <div class="card-body text-light">
+                      <p class="card-text text-right"> </p>
+                    </div>
                     {% if g.user %}
-                       <button data-id="{{r.id}}" class='fav btn btn-sm'>
-                         <i class="{% if r.id in recipe_ids %}fas fa-heart fa-2x{% else %}far fa-heart fa-2x{% endif %}"></i></button>
+                       <button data-id="{{r.id}}" class='fav btn btn-sm d-flex'>
+                         <i class="{% if r.id in recipe_ids %}fas fa-heart fa-2x{% else %}far fa-heart fa-2x{% endif %}"></i>
+                       </button>
                     {% endif %}
                  </div>
               </div>
@@ -61,8 +76,5 @@
           </div>
         {% endif %}
     </div>
-  <!-- <div class="flex"> 
-    <a href="/" class="neon btn btn-outline-warning btn-lg m-2"><i class="fas fa-home"></i></a>
-  </div> -->
 </div>
 {% endblock %}
