--- a/templates/foods/search.html
+++ b/templates/foods/search.html
@@ -1,9 +1,21 @@
 {% extends 'base.html' %}
 {% block title %}Search Bar{% endblock %}
 {% block content %}
+<style>
+  body {
+    background: url('/static/images/home.jpeg') no-repeat center center fixed;
+	  background-size: cover;
+	  -webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-clip: border-box;
+  	height: 100%;
+  }
+</style>
 <div class="container">
   {% if recipes %}
     <div id="recipe-info" class="row justify-content-center align-items-center mt-2">
+      <!-- <div id="recipe-info" class="col-md-5 col-lg-5 m-2"> -->
       <!-- <div class="jumbotron col-3 my-4">
         <div class="vertical-group" id="card">
           <th><h5 class="text-warning">Refine Your Search</h5></th>
@@ -30,12 +42,12 @@
           </div>
         </div> -->
         {% for r in recipes %}
-          <div class="jumbotron1 col-3 col-sm-10-6 m-2">
+          <div class="jumbotron1 col-3 col-6 col-md-4">
             <a href="/recipes/{{r.id}}" data-id="{{r.id}}" class="show-recipe">
               <div class="card border border-warning mb-4 mx-auto">
                 <img src="{{r.image}}" class="card-img-top" alt="{{r.name}}">
                   <div class="card-body py-1">
-                    <h5 class="text-danger text-center card-title m-2">{{ r['title'] }}</h5> </a>
+                    <h5 class="T text-danger text-center card-title m-2">{{ r['title'] }}</h5> </a>
                     {% if g.user %}
                       <button data-id="{{r.id}}" class='fav btn btn-sm'>
                         <i class="{% if r.id in recipe_ids %}fas fa-heart fa-2x{% else %}far fa-heart fa-2x{% endif %}"></i></button>
