--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             <div className="card">
               <div className="card-body">
                 <div class="col-md-10 offset-md-2 ">
-                  <a href="/random"><img class="float-right" id="logo1" src="/static/images/logos4.png" alt="logo"> </a>
+                  <a href="/random"><img class="float-right" id="logo1" src="/static/images/logos4.jpeg" alt="logo"> </a>
                 </div>     
                 <h5 class="text-light"> 
                   For a quick start, just click on the Logo and see the random recipes auto populated. 
